WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265628
[Wasm-GC] Fix subtyping for nullref
https://bugs.webkit.org/show_bug.cgi?id=265628
Summary
[Wasm-GC] Fix subtyping for nullref
Asumu Takikawa
Reported
2023-11-30 21:16:15 PST
Right now the subtype check for nullref is slightly wrong, in that it doesn't allow (ref null none) <: (ref null <idx>) where <idx> is some concrete array or struct type. This was the intended behavior, but there's an error in the subtype check function (it returns too soon before the intended case).
Attachments
Add attachment
proposed patch, testcase, etc.
Asumu Takikawa
Comment 1
2023-11-30 21:35:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21143
EWS
Comment 2
2023-12-01 10:43:26 PST
Committed
271395@main
(eaa3fcf1d383): <
https://commits.webkit.org/271395@main
> Reviewed commits have been landed. Closing PR #21143 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-01 10:44:14 PST
<
rdar://problem/119041089
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug