[Wasm-GC] Fix subtyping for nullref https://bugs.webkit.org/show_bug.cgi?id=265628

Reviewed by Justin Michaud.

* JSTests/wasm/gc/subtyping.js: Added.
(module):
(testNone):
* Source/JavaScriptCore/wasm/WasmFormat.h:
(JSC::Wasm::isInternalref):

Canonical link: https://commits.webkit.org/271395@main